# jongja_tf-a

./: Doxyfile_cmrt  Doxyfile_rtos  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_INTERNAL.md  build.sh  changelog.yaml  compile_commands.json  package-lock.json  pyproject.toml  run.sh  source_directories.sh  source_rebel_h.sh  temp.sv
bootloader/cp/fboot/: .gitignore  CMakeLists.txt  dma.c  dma.h  dma_reg.h  fboot.lds  main.c  printf.c  toolchain.cmake
drivers/: CMakeLists.txt
drivers/add_con/: CMakeLists.txt  add_con.c  add_con.h
drivers/arm/dcc/: dcc_console.c
drivers/auth/: auth_mod.c
drivers/auth/mbedtls/: mbedtls_common.mk  mbedtls_crypto.mk  mbedtls_psa_crypto.c
drivers/aw/: ucie.c
drivers/bat/: CMakeLists.txt  bat.c  bat.h
drivers/cadence/emmc/: cdns_sdmmc.c
drivers/cadence/nand/: cdns_nand.c
drivers/clk/clk_samsung/: cmu.h  cmu_cp.h  cmu_dram.h  cmu_ebus_r.h  cmu_ebus_u.h  cmu_nbus_d.h  cmu_rot.h  cmu_sbus_u.h  cmu_wbus_d.h
drivers/cmu/: CMakeLists.txt  cmu.c  cmu.h  cmu_cp.h  cmu_dcl.h  cmu_ebus_d.h  cmu_nbus_u.h  cmu_rbc.h  cmu_sbus_d.h  cmu_sbus_l.h
drivers/common/: CMakeLists.txt  assert.c  assert.h  chiplet.c  chiplet.h  driver.c  driver.h  interrupt.c  interrupt.h  sysreg_sysremap.h
drivers/dma/: CMakeLists.txt  pl330.c  pl330.h
drivers/dvfs/: CMakeLists.txt  dvfs.c  dvfs.h
drivers/flash/: CMakeLists.txt  mt25q_flash.c  nor.h
drivers/gpio/: CMakeLists.txt  gpio.c  gpio.h
drivers/hbm3/: CMakeLists.txt  ddr_csr.h  hbm3.c  hbm3.h  hbm3_am.c  hbm3_am.h  hbm3_chipid.c  hbm3_irq.c  hbm3_irq.h  hbm3ephy.h  icon.c  icon.h  ieee1500_icon.h  memtest.c  memtest.h  mt_alg.c  mt_amt.c  mt_arb.c  mt_test.c  sysreg_dram.h  tmrs.c  tmrs.h
drivers/i2c/: CMakeLists.txt  i2c.c  i2c.h
drivers/include/: rebel_h_ca73_freertos_driver.h  rebel_h_cm7_freertos_driver.h
drivers/intc/: CMakeLists.txt  gic.h  gic_spi_num.h  gicv3.c
drivers/mailbox/: CMakeLists.txt  mailbox.c  mailbox.h  mailbox_cb.c
drivers/noc_logger/: CMakeLists.txt  noc_logger.c  noc_logger.h
drivers/partition/: gpt.c  partition.c
drivers/pcie/: CMakeLists.txt  pcie_ctrl_register.h  pcie_doe.c  pcie_doe.h  pcie_dw.c  pcie_dw.h  pcie_dw_bar.c  pcie_dw_bar.h  pcie_dw_hdma.c  pcie_dw_hdma.h  pcie_dw_iatu.c  pcie_dw_iatu.h  pcie_dw_ide.c  pcie_dw_ide.h  pcie_dw_msix.c  pcie_dw_msix.h  pcie_ep.c  pcie_generated_config.h  pcie_generated_config.h.in  pcie_ide_apb_register.h  pcie_irq.c  pcie_irq.h  pcie_log.h  pcie_mailbox_callback.h  pcie_rebelh.h  pcie_snps_phy.c  pcie_snps_phy.h  pcie_subctrl.c  pcie_subctrl.h  pcie_subctrl_register.h  pcie_sysreg.c  pcie_sysreg.h  sysreg_buscsr_cp.h  sysreg_buscsr_pcie_register.h  sysreg_pcie_register.h
drivers/pmic/: CMakeLists.txt  g1505.c  g1505.h  ltc1427cs8.c  ltc1427cs8.h  mp29816a.c  mp29816a.h  mp5998.c  mp5998.h  mpq8785.c  mpq8785.h  pmic_mgr.c  pmic_mgr.h  tca9548a.c  tca9548a.h
drivers/pmu/: CMakeLists.txt  pmu.c  pmu.h
drivers/psci/: CMakeLists.txt  psci.c  psci.h
drivers/pvt_con/: CMakeLists.txt  pvt_con.c  pvt_con.h  pvt_con_config.h  pvt_con_reg.h  pvt_con_reg_process.h  pvt_con_reg_temperature.h  pvt_con_reg_voltage.h
drivers/qspi/qspi_apb/: CMakeLists.txt  (+2 more)
drivers/rbc/: CMakeLists.txt  aw_ucie.c  aw_ucie.h  cmu_rbc.h  rbc_cmd.c  rbc_cmd.h  rbc_driver.c  rbc_driver.h  timer.h
drivers/rbcm/: CMakeLists.txt  rbcm.h  rbcm_common.h  rbcm_core.c  rbcm_core.h  rbcm_driver.c  rbcm_driver.h  rbcm_reg_addr.h  rbcm_reg_model.h
drivers/sic/: CMakeLists.txt  sic.c  sic.h
drivers/smmu/: CMakeLists.txt  smmu.c  smmu.h  smmu_pmu.c  smmu_pmu.h  smmu_table.h  smmuvar.h
drivers/spi/: CMakeLists.txt  dwc_ssi.c  dwc_ssi.h
drivers/uart/: CMakeLists.txt  uart.c  uart.h
drivers/watchdog/: CMakeLists.txt  dw_apb_wdt.c  dw_apb_wdt.h  dw_apb_wdt_reg.h
lib/unity/: CMakeLists.txt  unity.c  unity.h  unity_fixture.c  unity_fixture.h  unity_fixture_internals.h  unity_internals.h
tests/: CMakeLists.txt  test_main.c
tests/arch/: CMakeLists.txt  test_cli.c  test_cli.h
tests/chipid/: CMakeLists.txt  read_chipid.c
tests/cmu/: CMakeLists.txt  test_cmu_main.c  test_cmu_main.h
tests/common/: CMakeLists.txt  test_common.h  test_mailbox_cb.c
tests/dma/: CMakeLists.txt  test_dma_main.c  test_dma_main.h
tests/dvfs/: CMakeLists.txt  test_dvfs_main.c
tests/flash/: CMakeLists.txt  test_flash.c
tests/gpio/: CMakeLists.txt  test_gpio.c  test_gpio.h
tests/hbm3/: CMakeLists.txt  hbm3_irq_test.c  memtest.c  memtest.h
tests/i2c/: CMakeLists.txt  test_i2c_main.c
tests/interrupt_test/: CMakeLists.txt  test_m7_irq.c
tests/interrupt_test_helper_example/: CMakeLists.txt  example_driver.c  example_driver.h  example_test.c
tests/log/: CMakeLists.txt  rebel_h_log.c
tests/mailbox/: CMakeLists.txt  test_mailbox_main.c  test_mailbox_main.h
tests/pcie/: CMakeLists.txt  test_ide.h  test_pcie.h  test_pcie_capability.c  test_pcie_doe.c  test_pcie_epf.c  test_pcie_hdma.c  test_pcie_hdma.h  test_pcie_history_store.c  test_pcie_iatu.c  test_pcie_ide.c  test_pcie_ide_scenario.c  test_pcie_main.c  test_pcie_mode.c  test_pcie_msix.c  test_pcie_rasdes.c  test_pcie_rasdp.c  test_pcie_utils.h
tests/pmic/: CMakeLists.txt  test_pmic_main.c  test_pmic_main.h
tests/pvt_con/: CMakeLists.txt  pvt_cli.c  pvt_cli.h  pvt_cli_disable.c  pvt_cli_disable.h  pvt_cli_enable.c  pvt_cli_enable.h  pvt_cli_set.c  pvt_cli_set.h  pvt_cli_show.c  pvt_cli_show.h  test_pvt_con.c  test_pvt_con.h
tests/qspi/: CMakeLists.txt  test_qspiapb.c
tests/rbc/: CMakeLists.txt  Makefile_test  makefile_worker.mk
tests/rbcm/: CMakeLists.txt  rbcm_reg_access_test.c  rbcm_reg_access_test.h  rbcm_reg_reset.h  rbcm_test.c  rbcm_test.h
tests/rbdma/: CMakeLists.txt  cache.S  cache.h  rbdma_tsync_test.c  rbdma_tsync_test.h  test_main_rbdma.c
tests/rbln/: CMakeLists.txt__  test_rbln.c
tests/sic/: CMakeLists.txt  test_sic.c  test_sic.h
tests/smmu/: CMakeLists.txt  test_mmu.h  test_mmu_main.c
tests/system_test/: CMakeLists.txt  data_process.c  data_process.h  dma_transaction.c  dma_transaction.h  system_test.h  test_data_process.c  test_dma_transaction.c  test_system.c
(+2243 files in other folders)
